# learningRust

core/advance/: errorHandling  errorHandling.rs  generic  generic.rs  match  match.rs  methods  methods.rs  optionEnum  optionEnum.rs  slices  slices.rs  traits  traits.rs  userDefinedType  userDefinedType.rs
core/elementary/: control_flow  control_flow.rs  data_types  data_types.rs  functions  functions.rs  var  var.rs
core/hello_world/: hello
rocket-app/: Cargo.toml  Rocket.toml  database.sqlite  diesel.toml
rocket-app/src/: auth.rs  main.rs  models.rs
