[package]
name = "rocket-app"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = {version = "0.5.0-rc", features= ["json"]}
serde = {version = "1.0",  features = ["derive"]}
serde_json = "1.0"
base64 = "0.20"
diesel = {version = "2.0", features= ["sqlite", "r2d2", "chrono"]}
rocket_sync_db_pools = {version = "0.1.0-rc", features = ["diesel_sqlite_pool"]}
chrono = { version = "0.4", features = ["serde"] }

